--- a/index.html
+++ b/index.html
@@ -2,33 +2,36 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Tree</title>
     <link rel="stylesheet" href="style.css">
+    <title>Social Tree</title>
 </head>
 <body>
-    <main class="box">
-            <div class="bio">
-                <img class="imagem" src="./imagens/image-255.jpg" alt="simbolo yin e yan">
-                <a href="#">@instagram</a>
-            </div>
-            <ul class="list-social">
-             <li>Link</li>
-             <li>Link</li>
-             <li>Link</li>
-             <li>Link</li>
-            </ul>
-            <div class="social-tree">
-                <ul>
-                    <li><img class="icone" src="./assets/assets/github.svg" alt="github" ></li>
-                    <li><img class="icone" src="./assets/assets/instagram.svg" alt="instagram" ></li>
-                    <li><img class="icone"src="./assets/assets/linkedin.svg" alt="linkedin" ></li>
-                    <li><img class="icone" src="./assets/assets/twitch.svg" alt="twitch" ></li>
-                    <li><img class="icone" src="./assets/assets/twitter.svg" alt="twitter" ></li>
+    <main>
+        <section class="bio">
+            <img class="imagem" src="image-255.jpg" alt="girl">
+            <a class="link-instagram" href="#">@ferreira-rb</a>
+        </section>
+        <section class="link">
+                <ul class="list-link">
+                    <li>Link</li>
+                    <li>Link</li>
+                    <li>Link</li>
+                    <li>Link</li>
                 </ul>
-            </div>
-            <p>Feito por <a href="#">Ferreira RB</a></p>
+        </section>
+        <section>
+            <ul class="list-link-2">
+                <li><img src="./assets/github.svg" alt="github"></li>
+                <li><img src="./assets/instagram.svg" alt="instagram"></li>
+                <li><img src="./assets/linkedin.svg" alt="linkedin"></li>
+                <li><img src="./assets/twitch.svg" alt="twitch"></li>
+                <li><img src="./assets/twitter.svg" alt="twitter"></li>
+            </ul>
+        </section>
+        <section class="footer">
+            <p>Desenvolvido por <a href="#">Rayane Ferreira</a></p>
+        </section>
     </main>
 </body>
 </html>
