--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <section class="bio">
-            <img class="imagem" src="image-255.jpg" alt="girl">
+            <img class="imagem" src="./imagens/image-255.jpg" alt="girl">
             <a class="link-instagram" href="#">@ferreira-rb</a>
         </section>
         <section class="link">
@@ -22,11 +22,11 @@
         </section>
         <section>
             <ul class="list-link-2">
-                <li><img src="./assets/github.svg" alt="github"></li>
-                <li><img src="./assets/instagram.svg" alt="instagram"></li>
-                <li><img src="./assets/linkedin.svg" alt="linkedin"></li>
-                <li><img src="./assets/twitch.svg" alt="twitch"></li>
-                <li><img src="./assets/twitter.svg" alt="twitter"></li>
+                <li><img src="./assets/assets/github.svg" alt="github"></li>
+                <li><img src="./assets/assets/instagram.svg" alt="instagram"></li>
+                <li><img src="./assets/assets/linkedin.svg" alt="linkedin"></li>
+                <li><img src="./assets/assets/twitch.svg" alt="twitch"></li>
+                <li><img src="./assets/assets/twitter.svg" alt="twitter"></li>
             </ul>
         </section>
         <section class="footer">
