--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </ul>
         </section>
         <section class="footer">
-            <p>Desenvolvido por <a href="#">Rayane Ferreira</a></p>
+           <p>Desenvolvido por <span class="nome">Rayane Ferreira</span></p>
         </section>
     </main>
 </body>
