--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
                 </ul>
         </section>
         <section>
-            <ul class="list-link-2">
-                <li><img src="./assets/assets/github.svg" alt="github"></li>
-                <li><img src="./assets/assets/instagram.svg" alt="instagram"></li>
-                <li><img src="./assets/assets/linkedin.svg" alt="linkedin"></li>
-                <li><img src="./assets/assets/twitch.svg" alt="twitch"></li>
-                <li><img src="./assets/assets/twitter.svg" alt="twitter"></li>
-            </ul>
+            <div class="contato">
+                <ul class="list-link-2">
+                    <li><img class="icon" src="./assets/github.svg" alt="github"></li>
+                    <li><img  class="icon" src="./assets/instagram.svg" alt="instagram"></li>
+                    <li><img  class="icon" src="./assets/linkedin.svg" alt="linkedin"></li>
+                    <li><img  class="icon" src="./assets/twitch.svg" alt="twitch"></li>
+                    <li><img  class="icon" src="./assets/twitter.svg" alt="twitter"></li>
+                </ul>
+            </div>
         </section>
         <section class="footer">
            <p>Desenvolvido por <span class="nome">Rayane Ferreira</span></p>
