--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <section>
             <div class="contato">
                 <ul class="list-link-2">
-                    <li><img class="icon" src="./assets/github.svg" alt="github"></li>
-                    <li><img  class="icon" src="./assets/instagram.svg" alt="instagram"></li>
-                    <li><img  class="icon" src="./assets/linkedin.svg" alt="linkedin"></li>
-                    <li><img  class="icon" src="./assets/twitch.svg" alt="twitch"></li>
-                    <li><img  class="icon" src="./assets/twitter.svg" alt="twitter"></li>
+                    <li><img class="icon" src="../assets/github.svg" alt="github"></li>
+                    <li><img  class="icon" src="../assets/instagram.svg" alt="instagram"></li>
+                    <li><img  class="icon" src="../assets/linkedin.svg" alt="linkedin"></li>
+                    <li><img  class="icon" src="../assets/twitch.svg" alt="twitch"></li>
+                    <li><img  class="icon" src="../assets/twitter.svg" alt="twitter"></li>
                 </ul>
             </div>
         </section>
